--- a/src/Components/Menu/_style.scss
+++ b/src/Components/Menu/_style.scss
@@ -48,5 +48,64 @@
             border-left: $menu-item-active-border-width solid $menu-item-active-color;
         }
     }
-    
 }
+
+.submenu-item {
+    position: relative;
+    .submenu-title {
+      display: flex;
+      align-items: center;
+    }
+    .arrow-icon {
+      transition: transform .25s ease-in-out;
+      margin-left: 3px;
+    }
+    &:hover {
+      .arrow-icon {
+        transform: rotate(180deg);
+      }
+    }
+  }
+
+  .submenu {
+    list-style:none;
+    padding-left: 0;
+    white-space: nowrap;
+    .menu-item {
+      padding: $menu-item-padding-y $menu-item-padding-x;
+      cursor: pointer;
+      transition: $menu-transition;
+      color: $body-color;
+      &.is-active, &:hover {
+        color: $menu-item-active-color !important;
+      }
+    }
+  }
+
+  .menu-horizontal {
+    >.menu-item {
+      border-bottom: $menu-item-active-border-width solid transparent;
+    }
+    .submenu {
+      position: absolute;
+      background: $white;
+      z-index: 100;
+      top: calc(100% + 8px);
+      left: 0;
+      border: $menu-border-width solid $menu-border-color;
+      box-shadow: $submenu-box-shadow;
+    }
+  }
+  .menu-vertical {
+    flex-direction: column;
+    border-bottom: 0px;
+    margin: 10px 20px;
+    border-right: $menu-border-width solid $menu-border-color;
+    >.menu-item {
+      border-left: $menu-item-active-border-width solid transparent;
+      &.is-active, &:hover {
+        border-bottom: 0px;
+        border-left: $menu-item-active-border-width solid $menu-item-active-color;
+      }
+    }
+  }
