--- a/src/Components/Button/_style.scss
+++ b/src/Components/Button/_style.scss
@@ -91,7 +91,7 @@
         left: 50%;
         margin-top: 2rem;
         bottom: 0.1em;
-        background: $secondary;
+        background: $primary;
     }
     }
     &:disabled,
