--- a/src/Components/Menu/_style.scss
+++ b/src/Components/Menu/_style.scss
@@ -53,7 +53,8 @@
     }
   }
   .submenu {
-    display: none;
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
     list-style:none;
     padding-left: 0;
     white-space: nowrap;
@@ -68,7 +69,7 @@
     }
   }
   .submenu.submenu-visible {
-    display: block;
+    opacity: 1;
   }
 }
 .menu-horizontal {
