feat: Card develop

--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -23,7 +23,7 @@ $cyan:    #17a2b8 !default;
 
 $primary:       $green !default;
 $secondary:     $purple !default;
-$success:       $green !default;
+$success:       $teal !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
