--- a/src/Components/Input/_style.scss
+++ b/src/Components/Input/_style.scss
@@ -1,3 +1,5 @@
+@use '../../Styles/variables' as variables;
+
 .input-wrapper {
     display: flex;
     width: 100%;
@@ -8,13 +10,13 @@
       height: 100%;
       width: 36px;
       justify-content: center;
-      color: $input-color;
+      color: variables.$input-color;
       right: 0;
       top: 0;
       display: flex;
       align-items: center;
       svg {
-        color: $input-placeholder-color;
+        color: variables.$input-placeholder-color;
       }
     }
   }
@@ -23,51 +25,51 @@
   }
   .input-inner {
     width: 100%;
-    padding: $input-padding-y $input-padding-x;
-    font-family: $input-font-family;
-    font-size: $input-font-size;
-    font-weight: $input-font-weight;
-    line-height: $input-line-height;
-    color: $input-color;
-    background-color: $input-bg;
+    padding: variables.$input-padding-y variables.$input-padding-x;
+    font-family: variables.$input-font-family;
+    font-size: variables.$input-font-size;
+    font-weight: variables.$input-font-weight;
+    line-height: variables.$input-line-height;
+    color: variables.$input-color;
+    background-color: variables.$input-bg;
     background-clip: padding-box;
-    border: $input-border-width solid $input-border-color;
+    border: variables.$input-border-width solid variables.$input-border-color;
   
     // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-    border-radius: $input-border-radius;
+    border-radius: variables.$input-border-radius;
   
-    box-shadow: $input-box-shadow;
-    transition: $input-transition;
+    box-shadow: variables.$input-box-shadow;
+    transition: variables.$input-transition;
   
     &:focus {
-      color: $input-focus-color;
-      background-color: $input-focus-bg;
-      border-color: $input-focus-border-color;
+      color: variables.$input-focus-color;
+      background-color: variables.$input-focus-bg;
+      border-color: variables.$input-focus-border-color;
       outline: 0;
       // Avoid using mixin so we can pass custom focus shadow properly
     }
     &::placeholder {
-      color: $input-placeholder-color;
+      color: variables.$input-placeholder-color;
       // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
       opacity: 1;
     }
     &:disabled,
     &[readonly] {
-      background-color: $input-disabled-bg;
-      border-color: $input-disabled-border-color;
+      background-color: variables.$input-disabled-bg;
+      border-color: variables.$input-disabled-border-color;
       // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
-      opacity: $btn-disabled-opacity;;
+      opacity: variables.$btn-disabled-opacity;;
     }
   }
   .input-size-sm .input-inner {
-    padding: $input-padding-y-sm $input-padding-x-sm;
-    font-size: $input-font-size-sm;
-    border-radius: $input-border-radius-sm;
+    padding: variables.$input-padding-y-sm variables.$input-padding-x-sm;
+    font-size: variables.$input-font-size-sm;
+    border-radius: variables.$input-border-radius-sm;
   }
   
   .input-size-lg .input-inner {
-    padding: $input-padding-y-lg $input-padding-x-lg;
-    font-size: $input-font-size-lg;
-    border-radius: $input-border-radius-lg;
+    padding: variables.$input-padding-y-lg variables.$input-padding-x-lg;
+    font-size: variables.$input-font-size-lg;
+    border-radius: variables.$input-border-radius-lg;
   }
   
