--- a/src/Components/Input/_style.scss
+++ b/src/Components/Input/_style.scss
@@ -1,4 +1,4 @@
-@use '../../Styles/variables' as variables;
+@use '../../Styles/variables' as inputVars;
 
 .input-wrapper {
     display: flex;
@@ -10,13 +10,13 @@
       height: 100%;
       width: 36px;
       justify-content: center;
-      color: variables.$input-color;
+      color: inputVars.$input-color;
       right: 0;
       top: 0;
       display: flex;
       align-items: center;
       svg {
-        color: variables.$input-placeholder-color;
+        color: inputVars.$input-placeholder-color;
       }
     }
   }
@@ -25,51 +25,51 @@
   }
   .input-inner {
     width: 100%;
-    padding: variables.$input-padding-y variables.$input-padding-x;
-    font-family: variables.$input-font-family;
-    font-size: variables.$input-font-size;
-    font-weight: variables.$input-font-weight;
-    line-height: variables.$input-line-height;
-    color: variables.$input-color;
-    background-color: variables.$input-bg;
+    padding: inputVars.$input-padding-y inputVars.$input-padding-x;
+    font-family: inputVars.$input-font-family;
+    font-size: inputVars.$input-font-size;
+    font-weight: inputVars.$input-font-weight;
+    line-height: inputVars.$input-line-height;
+    color: inputVars.$input-color;
+    background-color: inputVars.$input-bg;
     background-clip: padding-box;
-    border: variables.$input-border-width solid variables.$input-border-color;
+    border: inputVars.$input-border-width solid inputVars.$input-border-color;
   
     // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-    border-radius: variables.$input-border-radius;
+    border-radius: inputVars.$input-border-radius;
   
-    box-shadow: variables.$input-box-shadow;
-    transition: variables.$input-transition;
+    box-shadow: inputVars.$input-box-shadow;
+    transition: inputVars.$input-transition;
   
     &:focus {
-      color: variables.$input-focus-color;
-      background-color: variables.$input-focus-bg;
-      border-color: variables.$input-focus-border-color;
+      color: inputVars.$input-focus-color;
+      background-color: inputVars.$input-focus-bg;
+      border-color: inputVars.$input-focus-border-color;
       outline: 0;
       // Avoid using mixin so we can pass custom focus shadow properly
     }
     &::placeholder {
-      color: variables.$input-placeholder-color;
+      color: inputVars.$input-placeholder-color;
       // Override Firefox's unusual default opacity; see https://github.com/twbs/bootstrap/pull/11526.
       opacity: 1;
     }
     &:disabled,
     &[readonly] {
-      background-color: variables.$input-disabled-bg;
-      border-color: variables.$input-disabled-border-color;
+      background-color: inputVars.$input-disabled-bg;
+      border-color: inputVars.$input-disabled-border-color;
       // iOS fix for unreadable disabled content; see https://github.com/twbs/bootstrap/issues/11655.
-      opacity: variables.$btn-disabled-opacity;;
+      opacity: inputVars.$btn-disabled-opacity;;
     }
   }
   .input-size-sm .input-inner {
-    padding: variables.$input-padding-y-sm variables.$input-padding-x-sm;
-    font-size: variables.$input-font-size-sm;
-    border-radius: variables.$input-border-radius-sm;
+    padding: inputVars.$input-padding-y-sm inputVars.$input-padding-x-sm;
+    font-size: inputVars.$input-font-size-sm;
+    border-radius: inputVars.$input-border-radius-sm;
   }
   
   .input-size-lg .input-inner {
-    padding: variables.$input-padding-y-lg variables.$input-padding-x-lg;
-    font-size: variables.$input-font-size-lg;
-    border-radius: variables.$input-border-radius-lg;
+    padding: inputVars.$input-padding-y-lg inputVars.$input-padding-x-lg;
+    font-size: inputVars.$input-font-size-lg;
+    border-radius: inputVars.$input-border-radius-lg;
   }
   
