--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -16,3 +16,4 @@
 @use "../Components/Icon/style" as Icon;
 @use "../Components/Input/style" as Input;
 @use "../Components/Card/style" as Card;
+@use "../Components/AutoComplete/style" as AutoComplete;
