feat: add dark mode support and enhance component accessibility
- Add dark mode support to component library
- Optimize component stories for better documentation
- Add disabled state support to AutoComplete component
- Improve disabled styles for Input, Button, and Menu Item components
- Upgrade rc-tooltip dependency to latest version

--- a/src/Components/AutoComplete/_style.scss
+++ b/src/Components/AutoComplete/_style.scss
@@ -1,6 +1,7 @@
 @use '../../Styles/variables' as vars;
 
 .options-list {
+    color: vars.$autocomplete-list-color;
     background: vars.$autocomplete-bg;
     border: vars.$autocomplete-border-width solid vars.$autocomplete-focus-border-color;
     border-top: none;
