--- a/src/Styles/_reboot.scss
+++ b/src/Styles/_reboot.scss
@@ -30,9 +30,9 @@ body {
   font-size: $font-size-base;
   font-weight: $font-weight-base;
   line-height: $line-height-base;
-  color: $body-color;
+  color: var(--body-color);
+  background-color: var(--body-bg);
   text-align: $body-text-align;
-  background-color: $body-bg; // 2
   -webkit-text-size-adjust: 100%; // 3
   -webkit-tap-highlight-color: rgba($black, 0); // 4
 }
